--- a/src/renderer/themes/vampire/vampireCssModules/layout.css
+++ b/src/renderer/themes/vampire/vampireCssModules/layout.css
@@ -60,5 +60,5 @@
 }
 
 .layout-vampire .layout-scroll-area {
-  @apply flex-1 overflow-y-auto overflow-x-hidden p-0;
+  @apply flex-1 overflow-y-auto overflow-x-hidden p-0 pb-20 md:pb-0;
 }
